2006-03-27  Brian Cameron  <brian.cameron@sun.com>

        * gui/greeter/greeter_item_customlist.c:  Fix check so the
          language combo style works.  Fixes bug #423063.  Patch
          provided by Simon <simon@munton.demon.co.uk>.

2007-03-20  Brian Cameron  <brian.cameron@sun.com>

	* docs/C/gdm.xml: Add <revhistory> tag so that this branch of GDM
	  can be built with the latest docs tools.

2007-02-26  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmchooser.c:  Fix setting of PIPE_BUF to fix buf #409801
	  to fix Hurd support.

2006-02-14  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmdynamic.c: Fix comparison with string literal.
	  Fix by Hans Petter Jansson <hpj@novell.com>.  Fixes
	  bug #407687.

2007-02-05  Brian Cameron  <brian.cameron@sun.com>

        * gui/gdmlogin.c:  Better fix for not showing the face browser
          if the userlist is empty.  Now we add the model to the treeview
          and add entries to the model rather than building the model first.
          For some reason building the model first and adding it to the
          treeview was causing a selection "changed" signal to get sent
          which caused the interruption message to the slave process.
          Fix by Ludwig Nussel <ludwig.nussel@suse.de>.

2007-01-31  Brian Cameron  <brian.cameron@sun.com>

	* gui/greeter/greeter_item_customlist.c,
	  gui/greeter/greeter_canvas_item.c,
	  gui/greeter/greeter_canvas_text.c,
	  gui/greeter/greeter_session.c,
	  gui/gdmXnestchooser.c, gui/gdmchooser.c,
	  gui/gdmconfig.[ch], daemon/xdmcp.c,
	  daemon/verify-pam.c, daemon/server.c,
	  daemon/gdmconfig.c:  Fix warnings and fix an
	  assertion in gdm because it called
	  gdm_xdmcp_send_forward_query also for IPv6.
	  Patch by Ludwig Nussel.

2007-01-29  Brian Cameron  <brian.cameron@sun.com>

        * Release 2.16.5:
        * NEWS: Updated.
        * configure.ac: Update to new release version.

2006-12-15  Brian Cameron  <brian.cameron@sun.com>
